Fixed overflow with results page on search movie.

--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -1,6 +1,7 @@
 .Main {
     display: grid;
-    height: 100%;
+    height: 90vh;
+    overflow-y: scroll !important;
     min-width: 224px;
     grid-template-columns: 10fr 4fr;
 }
