--- a/src/components/Landing/SearchMovies/Results/Results.module.css
+++ b/src/components/Landing/SearchMovies/Results/Results.module.css
@@ -1,5 +1,6 @@
 .Results {
     height: 100%;
+    overflow-y: scroll !important;
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
